--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -6,6 +6,7 @@
                 </link>
             </meta>
         </meta>
+        
     </head>
     <body>
         <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
@@ -26,38 +27,15 @@
                     Pricing
                 </a>
             </nav>
-            <a class="btn btn-outline-primary" href="#">
-                Sign up
+            <a class="btn btn-outline-primary" id="btn_sair">
+                Sign out
             </a>
         </div>
         <div class="container">
             <div class="col px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">
-                            Email
-                        </label>
-                        <input aria-describedby="emailHelp" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email" type="email">
-                        </input>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">
-                            Senha
-                        </label>
-                        <input class="form-control" id="inputSenha" name="inputSenha" placeholder="Senha" type="password">
-                        </input>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" id="exampleCheck1" type="checkbox">
-                            <label class="form-check-label" for="exampleCheck1">
-                                Mantenha conectado
-                            </label>
-                        </input>
-                    </div>
-                    <button class="btn btn-primary" id="entrar" onclick="Login()" type="button">
-                        Entrar
-                    </button>
-                </form>
+                <h1>
+                    Seja bem vindo !!!
+                </h1>
             </div>
         </div>
     </body>
@@ -67,6 +45,11 @@
     </script>
     <script crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
     </script>
-    <script src="../js/Login.js" type="text/javascript">
-    </script>
+    <script>
+            $(document).ready(function(){
+                $('#btn_sair').click(function(){
+                    window.location.href = '/sair';
+                });
+            });
+        </script>
 </html>
