--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -15,8 +15,8 @@
                 Projeto Kaos
             </h5>
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="#">
-                    Features
+                <a class="p-2 text-dark" href="/adm/inserir-usuario">
+                    Administração
                 </a>
                 <a class="p-2 text-dark" href="#">
                     Enterprise
